fixed, occupy full screen width on mobile

--- a/btstyle.css
+++ b/btstyle.css
@@ -83,7 +83,7 @@ html {
       display: none !important;
     }
     main{
-      width:100%;
+      width:100% !important;
       
     }
     /* .section-heading{
